# rune

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  send
.github/: CODEOWNERS
.github/workflows/: ci.yml
benchmarks/harbor/: README.md  __init__.py  build_wheelhouse.sh  install_rune.sh  rune_agent.py
benchmarks/weak_model_deliverability/: README.md  results_guided_off_n6.json  results_guided_on_n10.json  results_hermes_stats_n5.json  results_wordfreq_guided_off_n5.json  results_wordfreq_guided_on_n5.json  run.py  tasks.py
desktop/: README.md  launch.sh  main.js  package-lock.json  package.json  preload.js
extension/rune-browser-bridge/: background.js  manifest.json  popup.html  popup.js
rune/: __init__.py  _lazy.py  slash_commands.py  types.py
rune/agent/: __init__.py  acceptance.py  agent_context.py  agent_types.py  auto_verify.py  autonomous.py  bash_parsing.py  checkpoint.py  citation_support.py  cognitive_cache.py  completion_failure_message.py  completion_gate.py  completion_trace_format.py  contract_plan.py  delegate_events.py  escalation.py  evidence_gate.py  evidence_spec.py  failover.py  fast_lane.py  file_tracker.py  generated_test.py  goal_classifier.py  goal_loop.py  goal_review.py  goal_runtime.py  goal_spec.py  goal_validate.py  intent_correction.py  intent_engine.py  isolation.py  litellm_adapter.py  llm_adapter.py  loop.py  memory_bridge.py  merge.py  message_utils.py  obs_cap.py  orchestrator.py  output_integrity.py  (+24 more)
rune/api/: auth.py  channel_adapter.py  client_sdk.py  command_actions.py  conversation_wiring.py  cors_policy.py  event_logger.py  local_auth_guard.py  protocol.py  router.py  run_tracker.py  server.py  terminal.py  web_protocol.py
rune/attachments/: __init__.py  classifier.py  preprocessor.py  resolver.py  types.py  vision_cache.py
rune/bench/: __init__.py  aa_manifest.py  aa_score.py  audit.py  runner.py  summary.py
rune/browser/: auto_detect.py  relay_server.py
rune/capabilities/: __init__.py  ask_user.py  bash.py  browser.py  browser_helpers.py  browser_observe_scoring.py  code_intelligence.py  credential.py  cron.py  delegate.py  document.py  file.py  memory_capability.py  output_prefixes.py  project.py  registry.py  safety_cap.py  service.py  skill_ops.py  task_ops.py  think.py  types.py  web.py
rune/channels/: discord.py  google_chat.py  google_chat_interaction.py  google_chat_security.py  line.py  line_interaction.py  mattermost.py  mattermost_interaction.py  registry.py  slack.py  telegram.py  tui.py  types.py  whatsapp.py  whatsapp_interaction.py
rune/cli/: __init__.py  advisor_cmd.py  agent_runner.py  bench_cmd.py  best_of.py  child_guard.py  command_routing.py  main.py  memory_cmd.py  self_cmd.py  shutdown.py
rune/config/: __init__.py  defaults.py  loader.py  profile.py  schema.py
rune/conversation/: __init__.py  context_budget.py  manager.py  store.py  types.py
rune/daemon/: client.py  gateway.py  heartbeat.py  heartbeat_checker.py  main.py  process_lock.py  progress_reporter.py  server.py  service.py  types.py  web_protocol.py
rune/evaluation/: types.py
rune/identity/: resolver.py
rune/integration/: heartbeat_bridge.py  proactive_bridge.py
rune/intelligence/: __init__.py  ast_analyzer.py  code_graph.py  repo_map.py
rune/llm/: __init__.py  client.py  local_embedding.py  model_capabilities.py  model_selection.py  models.py  router.py
rune/mcp/: __init__.py  bridge.py  client.py  config.py
rune/memory/: __init__.py  consolidation.py  fact_consolidator.py  lessons.py  manager.py  markdown_indexer.py  markdown_store.py  project_memory.py  project_memory_command.py  project_paths.py  promotion_engine.py  rollout_manager.py  rule_learner.py  search.py  state.py  store.py  tiered_memory.py  tuning.py  types.py  user_model.py  vector.py
scripts/: _pr1_live_smoke.py  bench_advisor.py  bench_cache_control.py  bench_cross_turn_cache.py  contrastive_distill_bench.py  demo_honest_agent.py  demo_honest_agent.tape  e2e_cache_boundary.py  e2e_test.py  goal_demo_webrtc.py  goal_demo_webrtc_rust.py  honesty_gap_bench.py  tamper_rate_bench.py  verify_cache_control.py
tests/: ab_token_optimization.py  conftest.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+444 files in other folders)
