[project]
name = "rune-ai"
version = "0.1.0"
description = "Local-first AI agent with persistent memory, safety guardrails, and multi-channel support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "RUNE Contributors"},
]
keywords = ["ai", "coding-assistant", "agent", "llm", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

dependencies = [
    # Core Agent
    "pydantic>=2.12.5",
    "litellm>=1.82.1",
    "tiktoken>=0.12.0",
    # TUI
    "rich>=14.3.3",
    "prompt-toolkit>=3.0.50",
    # CLI
    "typer>=0.24.1",
    # API Server
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    # Database
    "apsw>=3.51.2",
    # HTTP
    "httpx>=0.28.1",
    # Config
    "ruamel.yaml>=0.19.1",
    # Code Intelligence
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    # File System
    "watchfiles>=1.1.1",
    # Logging
    "structlog>=25.5.0",
    # Async
    "uvloop>=0.22.1; sys_platform != 'win32'",
    # MCP
    "mcp>=1.26.0",
    # Process
    "filelock>=3.25.0",
    # Serialization (hot-path)
    "msgspec>=0.20.0",
    # Type checking (runtime)
    "beartype>=0.22.3",
]

[project.optional-dependencies]
# Heavy optional features (lazy-imported, core works without them)
vector = ["faiss-cpu>=1.13.2"]
browser = ["playwright>=1.58.0"]
embedding = ["llama-cpp-python>=0.3.0"]
codeintel = ["tree-sitter-language-pack>=0.13.0"]

# Channel adapters
telegram = ["aiogram>=3.26.0", "aiohttp>=3.11.0"]
discord = ["discord.py>=2.7.1"]
slack = ["slack-sdk>=3.40.1"]
voice = ["onnxruntime>=1.24.3", "kokoro-onnx>=0.5.0", "edge-tts>=6.1.0", "sounddevice>=0.5.0"]

# Bundles
full = ["rune-ai[vector,browser,embedding,codeintel,telegram,discord,slack,voice]"]
all = ["rune-ai[full]"]

dev = [
    "rune-ai[full]",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.1",
    "ruff==0.15.5",
    "pytest-cov>=7.0.0",
]

[project.scripts]
rune = "rune.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/dybala-21/rune"
Repository = "https://github.com/dybala-21/rune"
Issues = "https://github.com/dybala-21/rune/issues"

[tool.hatch.build.targets.wheel]
packages = ["rune"]

[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "web/dist"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-too-long — enforced by formatter, not linter
    "E402",   # module-import-not-at-top — intentional lazy imports for startup perf
    "N806",   # non-lowercase-variable-in-function — TS porting convention
    "N815",   # mixed-case-variable-in-class-scope — TS porting convention
    "SIM102", # collapsible-if — readability preference, not a bug
    "SIM105", # suppressible-exception — contextlib.suppress is less readable in complex cases
    "SIM103", # needless-bool — explicit return True/False can be clearer
    "SIM108", # if-else-block-instead-of-if-exp — readability preference
    "SIM115", # open-file-with-context-handler — false positives on managed handles
    "SIM117", # multiple-with-statements — readability preference
    "N801",   # invalid-class-name — TS porting convention
    "N807",   # dunder-function-name — intentional protocol methods
    "N818",   # error-suffix-on-exception-name — existing convention
    "E741",   # ambiguous-variable-name — single-letter vars in math/loop contexts
    "B027",   # empty-method-without-abstract-decorator — base class stubs
]

[tool.ruff.lint.isort]
known-first-party = ["rune"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
